Refactors app with MVVM architecture
- Simple MVVM architecture is implemented with two mutabable live data's

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Architecture components
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
