--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,8 +1,7 @@
 workflows:
-  native-android:
+  android-workflow:
     name: Native Android
     max_build_duration: 30
-    instance_type: mac_mini_m1
     environment:
       vars:
         PACKAGE_NAME: "com.palfs.mvcapplication"
