--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
     package="com.cr.drink_suggester">
 
     <application
+        android:name=".DrinkSuggesterApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVCApplication">
-        <activity android:name="com.cr.drink_suggester.MainActivity">
+        <activity
+            android:exported="true"
+            android:name="com.cr.drink_suggester.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
